# rewarduq

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  tests.yml
configs/: train.yaml  train_debug.yaml  train_precompute.yaml  train_test.yaml
configs/accelerate/: default.yaml  fsdp.yaml  single_gpu.yaml
configs/dataset/eval/: reward_bench.yaml  ultrafeedback_binarized.yaml
configs/dataset/train/: skywork_reward_preference.yaml  test_zen.yaml  tulu_3_8b_preference_mixture.yaml  ultrafeedback_binarized.yaml
configs/hydra/: default.yaml
configs/method/: base.yaml
configs/method/bayesian_linear_head/: default.yaml  qwen3_0.6b.yaml  qwen3_1.7b.yaml  qwen3_14b.yaml  qwen3_32b.yaml  qwen3_4b.yaml  qwen3_8b.yaml  skywork_qwen3_0.6b.yaml  skywork_qwen3_1.7b.yaml  skywork_qwen3_4b.yaml  skywork_qwen3_8b.yaml  test_tiny.yaml
configs/method/dpo_head_dropout_ensemble/: default.yaml  qwen3_0.6b.yaml  qwen3_1.7b.yaml  qwen3_4b.yaml  skywork_qwen3_0.6b.yaml  skywork_qwen3_1.7b.yaml  skywork_qwen3_4b.yaml  test_tiny.yaml
configs/method/lora_ensemble/: default.yaml  qwen3_0.6b.yaml  qwen3_1.7b.yaml  qwen3_4b.yaml  skywork_qwen3_0.6b.yaml  skywork_qwen3_1.7b.yaml  skywork_qwen3_4b.yaml  test_tiny.yaml
configs/method/mlp_head_ensemble/: default.yaml  qwen3_0.6b.yaml  qwen3_1.7b.yaml  qwen3_14b.yaml  qwen3_32b.yaml  qwen3_4b.yaml  qwen3_8b.yaml  skywork_qwen3_0.6b.yaml  skywork_qwen3_1.7b.yaml  skywork_qwen3_4b.yaml  skywork_qwen3_8b.yaml  test_tiny.yaml
configs/paths/: default.yaml
configs/sweeps/: sweep_bay_lin.yaml  sweep_ens_lora.yaml  sweep_ens_mlp.yaml  sweep_mcd_dpo.yaml
scripts/: run_inference.py  train.py
src/rewarduq/: metrics.py
src/rewarduq/methods/: __init__.py  base.py  mlp_head.py
src/rewarduq/methods/bayesian_linear_head/: __init__.py  bayesian_linear_head_model.py  bayesian_linear_head_pipeline.py  bayesian_linear_head_trainer.py
src/rewarduq/methods/dpo_head_dropout_ensemble/: __init__.py  dpo_head_dropout_ensemble_model.py  (+2 more)
src/rewarduq/trainers/: __init__.py  callbacks.py  dpo_rewarduq_trainer.py  rewarduq_trainer.py  trainer_extension.py
src/rewarduq/utils/: __init__.py  common.py  data.py  logging.py  models.py  rewardbench.py
tests/: base.py  test_config_system.py  test_metrics.py
tests/methods/: test_bayesian_linear_head.py  test_dpo_head_dropout_ensemble.py  test_lora_ensemble.py  test_mlp_head_ensemble.py
tests/trainer/: test_rewarduq_trainer.py
(+9 files in other folders)
